--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
 		"@vueuse/components": "^9.4.0",
 		"@vueuse/core": "^9.4.0",
 		"@vueuse/nuxt": "^9.4.0",
-		"nuxt": "^3.1.0"
+		"nuxt": "^3.1.0",
+		"typescript-json-schema": "^0.55.0"
 	},
 	"dependencies": {
 		"@formkit/auto-animate": "^1.0.0-beta.5",
 		"@ionic/core": "^6.3.0",
 		"@ionic/vue": "^6.3.0",
+		"ajv": "^8.12.0",
 		"axios": "^1.2.6",
 		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
