--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@kevinmarrec/nuxt-pwa": "^0.17.0",
 		"@nuxtjs/ionic": "^0.10.0",
 		"@nuxtjs/supabase": "^0.3.5",
+		"@nuxtjs/tailwindcss": "^6.7.0",
 		"@vueuse/components": "^10.1.2",
 		"@vueuse/core": "^10.1.2",
 		"@vueuse/nuxt": "^10.1.2",
