--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
+		"@invictus.codes/nuxt-vuetify": "^0.2.20",
 		"@kevinmarrec/nuxt-pwa": "^0.17.0",
 		"@nuxtjs/ionic": "^0.10.0",
 		"@nuxtjs/supabase": "^0.3.5",
